test + code move

--- a/locale/en/mod-locale-settings-1.cfg
+++ b/locale/en/mod-locale-settings-1.cfg
@@ -35,7 +35,9 @@ se-thruster-suit-3-grid-size-h="SE's" Space Suit 3 height
 se-thruster-suit-3-grid-size-w="SE's" Space Suit 3 width
 se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 height
 se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 width
+
 [mod-setting-description]
+# Vanilla Armour's
 modular-armor-grid-size-h=Modular Armour Height\nMin:0\nMax:10\nBase Default:5\nMod Default:5\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 modular-armor-grid-size-w=Modular Armour Width\nMin:0\nMax:10\nBase Default:5\nMod Default:5\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
@@ -45,6 +47,7 @@ power-armor-grid-size-w=Power Armour MK1 Width\nMin:0\nMax:20\nBase Default:7\nM
 power-armor-mk2-grid-size-h=Power Armour MK2 Height\nMin:0\nMax:40\nBase Default:10\nMod Default:20\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 power-armor-mk2-grid-size-w=Power Armour MK2 Width\nMin:0\nMax:40\nBase Default:10\nMod Default:20\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
+# Custom Power Armour Fix/ (Custom Power Armour Reborn)
 mk3-destroyer-grid-size-h="Custom's" Power Armour MK3 Height\nMin:0\nMax:40\nBase_Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 mk3-destroyer-grid-size-w="Custom's" Power Armour MK3 Width\nMin:0\nMax:40\nBase_Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
@@ -54,6 +57,7 @@ mk4-exterminator-grid-size-w="Custom's" Power Armour MK4 Width\nMin:0\nMax:50\nB
 mk5-annihilator-grid-size-h="Custom's" Power Armour MK5 Height\nMin:0\nMax:400\nDefault:16\nMod Default:50\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 mk5-annihilator-grid-size-w="Custom's" Power Armour MK5 Width\nMin:0\nMax:400\nDefault:16\nMod Default:50\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
+# Bob's Armour's
 bob-power-armor-mk3-grid-size-h="Bob's" Power Armour MK3 Height\nMin:0\nMax:45\nBase Default:12\nMod Default:35\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 bob-power-armor-mk3-grid-size-w="Bob's" Power Armour MK3 Width\nMin:0\nMax:45\nBase Default:12\nMod Default:35\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
@@ -63,21 +67,25 @@ bob-power-armor-mk4-grid-size-w="Bob's" Power Armour MK4 Width\nMin:0\nMax:55\nD
 bob-power-armor-mk5-grid-size-h="Bob's" Power Armour MK5 Height\nMin:0\nMax:550\nDefault:16\nMod Default:55\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 bob-power-armor-mk5-grid-size-w="Bob's" Power Armour MK5 Width\nMin:0\nMax:550\nDefault:16\nMod Default:55\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
+# Power Armour mk3 
 pamk3-pmak3-grid-size-h="MK3's" Power Armour MK3 Height\nMin:0\nMax:30\nDefualt:14\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 pamk3-pmak3-grid-size-w="MK3's" Power Armour MK3 Width\nMin:0\nMax:30\nDefualt:14\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 pamk3-pmak4-grid-size-h="MK3's" Power Armour MK4 Height\nMin:0\nMax:50\nDefault:20\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 pamk3-pmak4-grid-size-w="MK3's" Power Armour MK4 Width\nMin:0\nMax:50\nDefault:20\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
+# Rampant Arsenal
 power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour Mk3 Height\nMin:0\nMax:60\nDefault:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Power Armour Mk3 Width\nMin:0\nMax:60\nDefault:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
+# Krastorio 2
 mk3-armor-grid-size-h="K2's" Power Armour MK3 Height\nMin:0\nMax:60\nDefault:10\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 mk3-armor-grid-size-w="K2's" Power Armour MK3 Width\nMin:0\nMax:60\nDefault:10\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 mk4-armor-grid-size-h="K2's" Power Armour Mk4 Height\nMin:0\nMax:500\nDefault:12\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
 mk4-armor-grid-size-w="K2's" Power Armour MK4 Width\nMin:0\nMax:500\nDefault:12\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
+# Space Exploration
 se-thruster-suit-grid-size-h="SE's" Space Suit 1 Height\nMin:0\nMax:30\nDefault:6\nMod Default:15\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 se-thruster-suit-grid-size-w="SE's" Space Suit 1 Width\nMin:0\nMax:30\nDefault:6\nMod Default:15\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
@@ -89,3 +97,5 @@ se-thruster-suit-3-grid-size-w="SE's" Space Suit 3 Width\nMin:0\nMax:60\nDefault
 
 se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 Height\nMin:0\nMax:500\nDefault:12\nMod Default:60\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 Width\nMin:0\nMax:500\nDefault:12\nMod Default:60\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+
+# Power And Armour (yet to come)
