--- a/locale/en/mod-locale-settings-1.cfg
+++ b/locale/en/mod-locale-settings-1.cfg
@@ -1,32 +1,34 @@
 [mod-setting-name]
+
+# Vanilla Armour's
 modular-armor-grid-size-h=Modular Armour height
 modular-armor-grid-size-w=Modular Armour width
 power-armor-grid-size-h=Power Armour MK1 height
 power-armor-grid-size-w=Power Armour MK1 width
 power-armor-mk2-grid-size-h=Power Armour MK2 height
 power-armor-mk2-grid-size-w=Power Armour MK2 width
-mk3-destroyer-grid-size-h=Custom's Power Armour MK3 height
-mk3-destroyer-grid-size-w=Custom's Power Armour MK3 width
-mk4-exterminator-grid-size-h=Custom's Power Armour MK4 height
-mk4-exterminator-grid-size-w=Custom's Power Armour MK4 width
-mk5-annihilator-grid-size-h=Custom's Power Armour MK5 height
-mk5-annihilator-grid-size-w=Custom's Power Armour MK5 width
-bob-power-armor-mk3-grid-size-h=Bob's Power Armour MK3 height
-bob-power-armor-mk3-grid-size-w=Bob's Power Armour MK3 width
-bob-power-armor-mk4-grid-size-h=Bob's Power Armour MK4 height
-bob-power-armor-mk4-grid-size-w=Bob's Power Armour MK4 width
-bob-power-armor-mk5-grid-size-h=Bob's Power Armour MK5 height
-bob-power-armor-mk5-grid-size-w=Bob's Power Armour MK5 width
-pamk3-pmak3-grid-size-h=Mk3's Power Armour MK3 height
-pamk3-pmak3-grid-size-w=Mk3's Power Armour MK3 width
-pamk3-pmak4-grid-size-h=Mk3's Power Armour MK4 height
-pamk3-pmak4-grid-size-w=Mk3's Power Armour MK4 width
-power-armor-mk3-armor-rampant-arsenal-grid-size-h=Arsenal's Power Armour MK3 height
-power-armor-mk3-armor-rampant-arsenal-grid-size-w=Arsenal's Power Armour MK3 width
-mk3-armor-grid-size-h=K2's Power Armour MK3 height
-mk3-armor-grid-size-w=K2's Power Armour MK3 width 
-mk4-armor-grid-size-h=K2's Power Armour MK4 height
-mk4-armor-grid-size-w=K2's Power Armour MK4 width
+
+# Bob's Armour's
+bob-power-armor-mk3-grid-size-h="Bob's" Power Armour MK3 height
+bob-power-armor-mk3-grid-size-w="Bob's" Power Armour MK3 width
+bob-power-armor-mk4-grid-size-h="Bob's" Power Armour MK4 height
+bob-power-armor-mk4-grid-size-w="Bob's" Power Armour MK4 width
+bob-power-armor-mk5-grid-size-h="Bob's" Power Armour MK5 height
+bob-power-armor-mk5-grid-size-w="Bob's" Power Armour MK5 width
+
+# Power Armour mk3
+pamk3-pmak3-grid-size-h="Mk3's" Power Armour MK3 height
+pamk3-pmak3-grid-size-w="Mk3's" Power Armour MK3 width
+pamk3-pmak4-grid-size-h="Mk3's" Power Armour MK4 height
+pamk3-pmak4-grid-size-w="Mk3's" Power Armour MK4 width
+
+# Krastorio 2
+mk3-armor-grid-size-h="K2's" Power Armour MK3 height
+mk3-armor-grid-size-w="K2's" Power Armour MK3 width 
+mk4-armor-grid-size-h="K2's" Power Armour MK4 height
+mk4-armor-grid-size-w="K2's" Power Armour MK4 width
+
+# Space Exploration
 se-thruster-suit-grid-size-h="SE's" Space Suit 1 height
 se-thruster-suit-grid-size-w="SE's" Space Suit 1 width
 se-thruster-suit-2-grid-size-h="SE's" Space Suit 2 height
@@ -36,7 +38,26 @@ se-thruster-suit-3-grid-size-w="SE's" Space Suit 3 width
 se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 height
 se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 width
 
+# Rampant Arsenal
+power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour MK3 height
+power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Power Armour MK3 width
+
+# Custom Power Armour Fix/ (Custom Power Armour Reborn
+#mk3-destroyer-grid-size-h="Custom's" Power Armour MK3 height
+#mk3-destroyer-grid-size-w="Custom's" Power Armour MK3 width
+#mk4-exterminator-grid-size-h="Custom's" Power Armour MK4 height
+#mk4-exterminator-grid-size-w="Custom's" Power Armour MK4 width
+#mk5-annihilator-grid-size-h="Custom's" Power Armour MK5 height
+#mk5-annihilator-grid-size-w="Custom's" Power Armour MK5 width
+# Disabled due to not loading have no idea way.
+
 [mod-setting-description]
+
+# explaining the (Base & Mod Defaults) 
+# Mod Defaults is waht my mod set the sizes to.
+# Base Defaults is waht the game has set the size to be or the mod u installled before i did my changes. So please keep it that way.
+# Also to keep the translation clean keep the Hight first and Witdh under
+
 # Vanilla Armour's
 modular-armor-grid-size-h=Modular Armour Height\nMin:0\nMax:10\nBase Default:5\nMod Default:5\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 modular-armor-grid-size-w=Modular Armour Width\nMin:0\nMax:10\nBase Default:5\nMod Default:5\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
@@ -47,55 +68,57 @@ power-armor-grid-size-w=Power Armour MK1 Width\nMin:0\nMax:20\nBase Default:7\nM
 power-armor-mk2-grid-size-h=Power Armour MK2 Height\nMin:0\nMax:40\nBase Default:10\nMod Default:20\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 power-armor-mk2-grid-size-w=Power Armour MK2 Width\nMin:0\nMax:40\nBase Default:10\nMod Default:20\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-# Custom Power Armour Fix/ (Custom Power Armour Reborn)
-mk3-destroyer-grid-size-h="Custom's" Power Armour MK3 Height\nMin:0\nMax:40\nBase_Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-mk3-destroyer-grid-size-w="Custom's" Power Armour MK3 Width\nMin:0\nMax:40\nBase_Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-
-mk4-exterminator-grid-size-h="Custom's" Power Armour MK4 Height\nMin:0\nMax:50\nBase Default:14\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-mk4-exterminator-grid-size-w="Custom's" Power Armour MK4 Width\nMin:0\nMax:50\nBase Default:14\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-
-mk5-annihilator-grid-size-h="Custom's" Power Armour MK5 Height\nMin:0\nMax:400\nDefault:16\nMod Default:50\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-mk5-annihilator-grid-size-w="Custom's" Power Armour MK5 Width\nMin:0\nMax:400\nDefault:16\nMod Default:50\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-
 # Bob's Armour's
 bob-power-armor-mk3-grid-size-h="Bob's" Power Armour MK3 Height\nMin:0\nMax:45\nBase Default:12\nMod Default:35\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 bob-power-armor-mk3-grid-size-w="Bob's" Power Armour MK3 Width\nMin:0\nMax:45\nBase Default:12\nMod Default:35\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-bob-power-armor-mk4-grid-size-h="Bob's" Power Armour MK4 Height\nMin:0\nMax:55\nDefault:14\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing size on exsisting save.[/color]
-bob-power-armor-mk4-grid-size-w="Bob's" Power Armour MK4 Width\nMin:0\nMax:55\nDefault:14\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+bob-power-armor-mk4-grid-size-h="Bob's" Power Armour MK4 Height\nMin:0\nMax:55\nBase Default:14\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing size on exsisting save.[/color]
+bob-power-armor-mk4-grid-size-w="Bob's" Power Armour MK4 Width\nMin:0\nMax:55\nBase Default:14\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-bob-power-armor-mk5-grid-size-h="Bob's" Power Armour MK5 Height\nMin:0\nMax:550\nDefault:16\nMod Default:55\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-bob-power-armor-mk5-grid-size-w="Bob's" Power Armour MK5 Width\nMin:0\nMax:550\nDefault:16\nMod Default:55\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+bob-power-armor-mk5-grid-size-h="Bob's" Power Armour MK5 Height\nMin:0\nMax:550\nBase Default:16\nMod Default:55\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+bob-power-armor-mk5-grid-size-w="Bob's" Power Armour MK5 Width\nMin:0\nMax:550\nBase Default:16\nMod Default:55\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Power Armour mk3 
-pamk3-pmak3-grid-size-h="MK3's" Power Armour MK3 Height\nMin:0\nMax:30\nDefualt:14\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-pamk3-pmak3-grid-size-w="MK3's" Power Armour MK3 Width\nMin:0\nMax:30\nDefualt:14\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+pamk3-pmak3-grid-size-h="MK3's" Power Armour MK3 Height\nMin:0\nMax:30\nBase Default:14\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+pamk3-pmak3-grid-size-w="MK3's" Power Armour MK3 Width\nMin:0\nMax:30\nBase Default:14\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-pamk3-pmak4-grid-size-h="MK3's" Power Armour MK4 Height\nMin:0\nMax:50\nDefault:20\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-pamk3-pmak4-grid-size-w="MK3's" Power Armour MK4 Width\nMin:0\nMax:50\nDefault:20\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-
-# Rampant Arsenal
-power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour Mk3 Height\nMin:0\nMax:60\nDefault:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Power Armour Mk3 Width\nMin:0\nMax:60\nDefault:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+pamk3-pmak4-grid-size-h="MK3's" Power Armour MK4 Height\nMin:0\nMax:50\nBase Default:20\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+pamk3-pmak4-grid-size-w="MK3's" Power Armour MK4 Width\nMin:0\nMax:50\nBase Default:20\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Krastorio 2
-mk3-armor-grid-size-h="K2's" Power Armour MK3 Height\nMin:0\nMax:60\nDefault:10\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-mk3-armor-grid-size-w="K2's" Power Armour MK3 Width\nMin:0\nMax:60\nDefault:10\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+mk3-armor-grid-size-h="K2's" Power Armour MK3 Height\nMin:0\nMax:60\nBase Default:10\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+mk3-armor-grid-size-w="K2's" Power Armour MK3 Width\nMin:0\nMax:60\nBase Default:10\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-mk4-armor-grid-size-h="K2's" Power Armour Mk4 Height\nMin:0\nMax:500\nDefault:12\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
-mk4-armor-grid-size-w="K2's" Power Armour MK4 Width\nMin:0\nMax:500\nDefault:12\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+mk4-armor-grid-size-h="K2's" Power Armour Mk4 Height\nMin:0\nMax:500\nBase Default:12\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost wehn reducing grid size on exsisting save.[/color]
+mk4-armor-grid-size-w="K2's" Power Armour MK4 Width\nMin:0\nMax:500\nBase Default:12\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Space Exploration
-se-thruster-suit-grid-size-h="SE's" Space Suit 1 Height\nMin:0\nMax:30\nDefault:6\nMod Default:15\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-se-thruster-suit-grid-size-w="SE's" Space Suit 1 Width\nMin:0\nMax:30\nDefault:6\nMod Default:15\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+se-thruster-suit-grid-size-h="SE's" Space Suit 1 Height\nMin:0\nMax:30\nBase Default:6\nMod Default:15\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+se-thruster-suit-grid-size-w="SE's" Space Suit 1 Width\nMin:0\nMax:30\nBase Default:6\nMod Default:15\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-se-thruster-suit-2-grid-size-h="SE's" Space Suit 2 Height\nMin:0\nMax:45\nDefault:8\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-se-thruster-suit-2-grid-size-w="SE's" Space Suit 2 Width\nMin:0\nMax:45\nDefault:8\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+se-thruster-suit-2-grid-size-h="SE's" Space Suit 2 Height\nMin:0\nMax:45\nBase Default:8\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+se-thruster-suit-2-grid-size-w="SE's" Space Suit 2 Width\nMin:0\nMax:45\nBase Default:8\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
  
-se-thruster-suit-3-grid-size-h="SE's" Space Suit 3 Height\nMin:0\nMax:60\nDefault:10\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-se-thruster-suit-3-grid-size-w="SE's" Space Suit 3 Width\nMin:0\nMax:60\nDefault:10\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+se-thruster-suit-3-grid-size-h="SE's" Space Suit 3 Height\nMin:0\nMax:60\nBase Default:10\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+se-thruster-suit-3-grid-size-w="SE's" Space Suit 3 Width\nMin:0\nMax:60\nBase Default:10\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 Height\nMin:0\nMax:500\nDefault:12\nMod Default:60\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 Width\nMin:0\nMax:500\nDefault:12\nMod Default:60\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 Height\nMin:0\nMax:500\nBase Default::12\nMod Default:60\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 Width\nMin:0\nMax:500\nBase Default:12\nMod Default:60\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Power And Armour (yet to come)
+
+# Rampant Arsenal
+power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour Mk3 Height\nMin:0\nMax:60\nBase Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Power Armour Mk3 Width\nMin:0\nMax:60\nBase Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+
+# Custom Power Armour Fix/ (Custom Power Armour Reborn)
+# Disabled due to not loading have no idea way.
+
+#mk3-destroyer-grid-size-h="Custom's" Power Armour MK3 Height\nMin:0\nMax:40\nBase_Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+#mk3-destroyer-grid-size-w="Custom's" Power Armour MK3 Width\nMin:0\nMax:40\nBase_Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+
+#mk4-exterminator-grid-size-h="Custom's" Power Armour MK4 Height\nMin:0\nMax:50\nBase Default:14\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+#mk4-exterminator-grid-size-w="Custom's" Power Armour MK4 Width\nMin:0\nMax:50\nBase Default:14\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+
+#mk5-annihilator-grid-size-h="Custom's" Power Armour MK5 Height\nMin:0\nMax:500\nBase Default:16\nMod Default:50\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+#mk5-annihilator-grid-size-w="Custom's" Power Armour MK5 Width\nMin:0\nMax:500\nBase Default:16\nMod Default:50\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
