--- a/locale/no/mod-locales-settings-1.cfg
+++ b/locale/no/mod-locales-settings-1.cfg
@@ -31,8 +31,8 @@ mk4-armor-grid-size-w="K2's" Elektrisk Rustning MK4 Bredde
 # Space Exploration
 se-thruster-suit-grid-size-h="SE's" Rom Drakt 1 Høyde
 se-thruster-suit-grid-size-w="SE's" Rom Drakt 1 Bredde
-se-thruster-suit-2grid-size-h="SE's" Rom Drakt 2 Høyde
-se-thruster-suit-2grid-size-w="SE's" Rom Drakt 2 Bredde
+se-thruster-suit-2-grid-size-h="SE's" Rom Drakt 2 Høyde
+se-thruster-suit-2-grid-size-w="SE's" Rom Drakt 2 Bredde
 se-thruster-suit-3-grid-size-h="SE's" Rom Drakt 3 Høyde
 se-thruster-suit-3-grid-size-w="SE's" Rom Drakt 3 Bredde
 se-thruster-suit-4-grid-size-h="SE's" Rom Drakt 4 Høyde
@@ -55,13 +55,13 @@ power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Elektrisk Rustning
 
 # Vanilla Armour's
 modular-armor-grid-size-h=Modulær Rustnings Rutenett Høyde\nMin:0\nMaks:10\nSpillets Noraml:5\nModden's Normal:5\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-modular-armor-grid-size-w=Modulær Rustnings Rutenett Bredde\n Min:0\nMaks:10\nSpillets Noraml:5\nModden's Normal:5\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+modular-armor-grid-size-w=Modulær Rustnings Rutenett Bredde\nMin:0\nMaks:10\nSpillets Noraml:5\nModden's Normal:5\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
 
 power-armor-grid-size-h= Elektrisk Rustnings Rutenett Høyde\nMin:0\nMaks:20\nSpillets Noraml:\nModden's Normal:\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
 power-armor-grid-size-w= Elektrisk Rustnings Rutenett Bredde\nMin:0\nMaks:20\nSpillets Noraml:\nModden's Normal:\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
 
-power-armor-mk2-grid-size-h=Elektrisk Rustning mk2 Rutenett Høyde\nMin:0\nMaks:40\nSpillets Noraml:\nModden's Normal:\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-power-armor-mk2-grid-size-w=Elektrisk Rustning mk2 Rutenett Bredde\nMin:0\nMaks:40\nSpillets Noraml:\nModden's Normal:\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+power-armor-mk2-grid-size-h=Elektrisk Rustning mk2 Rutenett Høyde\nMin:0\nMaks:40\nSpillets Noraml:\nModden's Normal:20\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+power-armor-mk2-grid-size-w=Elektrisk Rustning mk2 Rutenett Bredde\nMin:0\nMaks:40\nSpillets Noraml:\nModden's Normal:20\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
 
 # Bob's Armour's
 bob-power-armor-mk3-grid-size-h="Bob's" Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:45\nSpillets Noraml:12\nModden's Normal:35\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
