--- a/locale/no/mod-locales-settings-1.cfg
+++ b/locale/no/mod-locales-settings-1.cfg
@@ -54,14 +54,14 @@ power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Elektrisk Rustning
 [mod-setting-description]
 
 # Vanilla Armour's
-modular-armor-grid-size-h=Modulær Rustnings Rutenett Høyde\nMin:0\nMaks:10\nSpillets Noraml:5\nModden's Normal:5\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-modular-armor-grid-size-w=Modulær Rustnings Rutenett Bredde\nMin:0\nMaks:10\nSpillets Noraml:5\nModden's Normal:5\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+modular-armor-grid-size-h=Modulær Rustnings Rutenett Høyde\nMin:0\nMaks:10\nSpillets Normal:5\nModden's Normal:5\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+modular-armor-grid-size-w=Modulær Rustnings Rutenett Bredde\nMin:0\nMaks:10\nSpillets Normal:5\nModden's Normal:5\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
 
-power-armor-grid-size-h= Elektrisk Rustnings Rutenett Høyde\nMin:0\nMaks:20\nSpillets Noraml:\nModden's Normal:\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-power-armor-grid-size-w= Elektrisk Rustnings Rutenett Bredde\nMin:0\nMaks:20\nSpillets Noraml:\nModden's Normal:\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+power-armor-grid-size-h= Elektrisk Rustnings Rutenett Høyde\nMin:0\nMaks:20\nSpillets Normal:7\nModden's Normal:10\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+power-armor-grid-size-w= Elektrisk Rustnings Rutenett Bredde\nMin:0\nMaks:20\nSpillets Normal:7\nModden's Normal:10\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
 
-power-armor-mk2-grid-size-h=Elektrisk Rustning mk2 Rutenett Høyde\nMin:0\nMaks:40\nSpillets Noraml:\nModden's Normal:20\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-power-armor-mk2-grid-size-w=Elektrisk Rustning mk2 Rutenett Bredde\nMin:0\nMaks:40\nSpillets Noraml:\nModden's Normal:20\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+power-armor-mk2-grid-size-h=Elektrisk Rustning mk2 Rutenett Høyde\nMin:0\nMaks:40\nSpillets Normal:10\nModden's Normal:20\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+power-armor-mk2-grid-size-w=Elektrisk Rustning mk2 Rutenett Bredde\nMin:0\nMaks:40\nSpillets Normal:10\nModden's Normal:20\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
 
 # Bob's Armour's
 bob-power-armor-mk3-grid-size-h="Bob's" Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:45\nSpillets Noraml:12\nModden's Normal:35\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
